--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="overmij.html">Over mij</a></li>
                     <li><a
+                    href="info.html">Emre Belozoglu</a></li>
               
                     <li><a href="info.html">Mesut Ozil </a></li>
                     <li><a
