--- a/index (copy).html
+++ b/index (copy).html
@@ -15,10 +15,10 @@
             
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="kayra.html">Over mij</a></li>
                     <li><a
-                     class="active"href="emre.html">Emre Belozoglu</a></li>
+                    href="emre.html">Emre Belozoglu</a></li>
               
                     <li><a href="mesut.html">Mesut Ozil </a></li>
                     <li><a
