--- a/kayra.html
+++ b/kayra.html
@@ -15,8 +15,8 @@
             
             <nav>
                 <ul>
-                    <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="kayra.html">Over mij</a></li>
+                    <li><a  href="index.html">Home</a></li>
+                    <li><a class="active"href="kayra.html">Over mij</a></li>
                     <li><a
                     href="emre.html">Emre Belozoglu</a></li>
               
