--- a/mesut.html
+++ b/mesut.html
@@ -10,7 +10,7 @@
     <body>
         <main>
             <header>
-                <h1 id="hoofdtitel" class="belangrijk">Voetbal</h1>
+                <h1 id="hoofdtitel" class="belangrijk">Mesut Ozil</h1>
             </header>
             
             <nav>
