--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
             <footer>
                 <hr/>
-                <p>info@emmauscollege.nl</p>
+                <p>112698@emmauscollege.nl</p>
                 <p class="smalltext">copyright A.P. Cammeraat 2016</p>
             </footer>
         
