--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </p>
              
              
-             <p> <img class="Bekerfoto" src= "https://iaftm.tmgrup.com.tr/43d040/1200/627/0/129/1200/757?u=https://iftm.tmgrup.com.tr/2021/11/21/derbide-kazanan-fenerbahce-galatasaray-fenerbahce-1-2-mac-sonucu-ozet-1637518319500.jpeg">
+             <p> <img class="Bekerfoto" src= "afbeeldingen/foto fener.jpeg">
 
              </div>
              <div class= "tekstplaat"
