--- a/kayra.html
+++ b/kayra.html
@@ -60,7 +60,7 @@
 
               </div>
 
-            <!--ik heb geprobeerd te wijzen wat waar is met de html. Voor de rest heb ik de foto's aangewezen bij de folder "afbeeldingen". Ik begon een beetje gemakzuchtig maar ik heb het goed opgepakt de laatste tijd. Jammer dat we niet verder konden op school. Ik zat wel even in een stress omdat ik het op een andere doc had gemaakt die niet gekoppeld was met github. Ik had die afgerond en gekopieerd en alles naar hier geplakt. Ik vond het een leuke opdracht en heb er van genoten.-->
+            <!--ik heb geprobeerd te wijzen wat waar is met de html. Voor de rest heb ik de foto's aangewezen bij de folder "afbeeldingen". Ik begon een beetje gemakzuchtig maar ik heb het goed opgepakt de laatste tijd. Jammer dat we niet verder konden op school. Ik zat wel even in een stress omdat ik het op een andere doc had gemaakt die niet gekoppeld was met github. Ik had die afgerond en gekopieerd en alles naar hier geplakt. Voor de rest had ik eerst allemaal blokjes. Dat vond ik fijn om mijn site te delen in stukken. Aan het eind wou ik die blokjes niet dus heb ik die hetzelfde kleur gegeven waardoor het beeld nu helemaal blauw is. Dat vond ik uit mijn ogen fijner. Voor de rest vond ik het een leuke opdracht en heb er van genoten.-->
              
         
 
